# oef-core

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.txt  Jenkinsfile  README.md  agent.proto
3rd/: CMakeLists.txt
apps/: CMakeLists.txt
apps/client/: CMakeLists.txt
apps/client/src/: main.cpp
apps/clientsherd/: CMakeLists.txt
apps/clientsherd/src/: main.cpp
apps/maze/: CMakeLists.txt
apps/maze/src/: main.cpp  maze.hpp  maze_gen.hpp
apps/mazeexplorer/: CMakeLists.txt
apps/mazeexplorer/src/: main.cpp  oef.hpp  state.cpp  state.hpp
apps/meteoclient/: CMakeLists.txt
apps/meteoclient/src/: main.cpp
apps/meteomulticlient/: CMakeLists.txt
apps/meteomulticlient/src/: main.cpp
apps/meteostation/: CMakeLists.txt
apps/meteostation/src/: main.cpp
apps/meteostationsim/: CMakeLists.txt
apps/meteostationsim/src/: main.cpp
apps/multiclient/: CMakeLists.txt
apps/multiclient/src/: main.cpp
apps/multiclientsherd/: CMakeLists.txt
apps/multiclientsherd/src/: main.cpp
apps/node/: CMakeLists.txt
apps/node-pluto/: CMakeLists.txt
apps/node-pluto/src/: main.cpp
apps/node/src/: main.cpp
end-to-end-oef/: configure.sh  configure_from_scratch.sh  docker-compose.yml  echo_service.py  install_n_run_echo_service.sh  wait_for.sh
lib/: CMakeLists.txt
lib/benchmark/: CMakeLists.txt
lib/benchmark/src/: serialization.cpp
lib/include/: agent.hpp  agent_directory.hpp  agent_session.hpp  agentdirectory.hpp  asio_acceptor.hpp  asio_basic_communicator.hpp  asio_communicator.hpp  client.h  clientmsg.h  clientmsg.hpp  common.h  common.hpp  config.hpp  core_server.hpp  dialogue.hpp  grid.h  logger.hpp  messages.h  msg_handle.hpp  multiclient.h  oef_search_client.hpp  oefcoreproxy.hpp  proxy.h  queue.h  queue.hpp  schema.h  schema.hpp  sd.h  search_com.hpp  serialization.hpp  server.h  server.hpp  servicedirectory.hpp  uuid.h  uuid.hpp
lib/include/api/: agent_directory_t.hpp  agent_session_t.hpp  basic_communicator_t.hpp  buffer_t.hpp  communicator_acceptor_t.hpp  communicator_t.hpp  continuation_t.hpp  core_server_t.hpp  oef_search_client_t.hpp  oef_search_response_t.hpp
lib/include/interface/: agent_directory_t.hpp  agent_session_t.hpp  buffer_t.hpp  comm_acceptor_t.hpp  communicator_t.hpp  core_server_t.hpp  oef_search_client_t.hpp  oefsearch_session_t.hpp
lib/proto/: CMakeLists.txt  agent.proto  fipa.proto  query.proto  search.proto  search_response.proto
lib/src/: agent_directory.cpp  agent_session.cpp  asio_acceptor.cpp  asio_comm.cpp  asio_communicator.cpp  client.cpp  common.cpp  core_server.cpp  dialogue.cpp  logger.cpp  oef_search_client.cpp  proxy.cpp  schema.cpp  serialization.cpp  server.cpp
lib/test/: CMakeLists.txt
lib/test/src/: messages.cpp  schema.cpp  tests.cpp  transfer.cpp
oef-core-image/: Dockerfile  docker-env.sh
oef-core-pluto-image/: Dockerfile  Dockerfile.production.OEFNodePluto  build-prod-oef-node.py  docker-env.sh
proto/: CMakeLists.txt  agent.proto  fipa.proto  maze.proto
scripts/: code-format-apply.sh  code-helpers.sh  code-static-analyze.sh
src/: client.cpp  main.cpp  server.cpp
